<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.RecyclerView
            android:overScrollMode="never"
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/floating_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        fab:layout_behavior=".widget.FloatingActionMenuBehavior"
        fab:menu_colorNormal="?attr/colorPrimary"
        fab:menu_colorPressed="?attr/colorAccent"
        fab:menu_colorRipple="@color/white_transparent"
        fab:menu_labels_ellipsize="end"
        fab:menu_labels_singleLine="true"
        fab:menu_backgroundColor="#00ffffff">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_scoll_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_publish_white_24dp"
            style="@style/MenuColorStyle"
            fab:fab_size="mini"
            fab:fab_label="@string/scrollToTop" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_create_file"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_color_white_24dp"
            style="@style/MenuColorStyle"
            fab:fab_size="mini"
            fab:fab_label="@string/createFile" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_create_floder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_border_color_white_24dp"
            style="@style/MenuColorStyle"
            fab:fab_size="mini"
            fab:fab_label="@string/createFolder" />

    </com.github.clans.fab.FloatingActionMenu>
</android.support.design.widget.CoordinatorLayout>
